--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,16 @@
       <artifactId>spring-test</artifactId>
       <version>4.3.18.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.14</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.14</version>
+    </dependency>
   </dependencies>
 
   <build>
