--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/didaoa?characterEncoding=utf8
+    url: jdbc:mysql://localhost:3308/didaoa?characterEncoding=utf8
     username: root
-    password: 123456
+    password: sa
     type: com.mchange.v2.c3p0.ComboPooledDataSource
 mybatis:
   type-aliases-package: com.qf.pojo
